crates/keron-lang/tests/corpus/errors/check/match_unreachable_after_wildcard.keron
fn label(s: String): Int {
  match s {
    _ => 1,
    "a" => 2,
  }
}
